# dcypher

./: .dockerignore  .gitignore  .gitmodules  .openhands-instructions.md  .windsurfrules  ALLHANDS.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.allhands  Dockerfile.dev  Justfile  README-dev-env.md  README.md  RELEASING.md  RUST_PORT_PLAN.md  SETUP_NOTES.md  TODO.md  TUI_README.md  buf.gen.yaml  buf.yaml  build.zig  build.zig.zon  build_openfhe.zig  config.toml  env.sh  hello.py  openfhe.zig  openfhe_wrapper.cpp  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup_env.sh  temp.recrypt  test-cli.sh  test-e2e-recryption.sh  test_determinism.py
.cargo/: config.toml
.claude/: settings.local.json
.cursor/: rules
.github/workflows/: ci.yml  docker.yml  release.yml  test-openhands-compatibility.yml
.openhands/microagents/: repo.md
crates/dcypher-core/: Cargo.toml
crates/dcypher-ffi/: Cargo.toml  build.rs
crates/dcypher-ffi/src/: ed25519.rs  lib.rs
crates/dcypher-ffi/src/liboqs/: mod.rs  sig.rs
crates/dcypher-ffi/src/openfhe/: mod.rs
crates/dcypher-openfhe-sys/: Cargo.toml  build.rs
crates/dcypher-proto/: Cargo.toml  build.rs
crates/dcypher-proto/proto/: dcypher.proto
crates/dcypher-proto/src/: convert.rs  error.rs  impls.rs  lib.rs
crates/dcypher-proto/tests/: roundtrip.rs  signature_serialization.rs
crates/dcypher-storage/: Cargo.toml
crates/identikey-storage-auth/: Cargo.toml
crates/identikey-storage-auth/src/: capability.rs  error.rs  fingerprint.rs  grant.rs  lib.rs  ownership.rs  provider.rs
crates/identikey-storage-auth/src/memory/: mod.rs  ownership.rs  provider.rs
crates/identikey-storage-auth/src/sqlite/: mod.rs  ownership.rs  provider.rs  schema.rs
crates/identikey-storage-auth/tests/: integration_tests.rs
crates/recrypt-core/: Cargo.toml
crates/recrypt-core/benches/: crypto_ops.rs
crates/recrypt-core/examples/: README.md  alice_bob_carol.rs  basic_encryption.rs  check_key_sizes.rs  identity_timing.rs  keygen_timing.rs  multi_signature.rs  test_mldsa.rs
crates/recrypt-core/src/: error.rs  lib.rs
crates/recrypt-core/src/hybrid/: keymaterial.rs
crates/recrypt-core/src/pre/: keys.rs  mod.rs  traits.rs
crates/recrypt-core/src/pre/backends/: lattice.rs  mock.rs  mod.rs  tfhe.rs
crates/recrypt-core/src/sign/: mod.rs
crates/recrypt-core/tests/: properties.rs  regression.rs  signature_integration.rs
crates/recrypt-ffi/: Cargo.toml
crates/recrypt-ffi/src/: error.rs  lib.rs
crates/recrypt-ffi/src/openfhe/: mod.rs  pre.rs
crates/recrypt-openfhe-sys/: Cargo.toml  build.rs
crates/recrypt-proto/: Cargo.toml  build.rs
crates/recrypt-proto/proto/: recrypt.proto
crates/recrypt-proto/src/: armor.rs  bao_stream.rs  convert.rs  error.rs  format.rs  impls.rs  lib.rs
crates/recrypt-proto/tests/: roundtrip.rs  signature_serialization.rs
crates/recrypt-storage/: Cargo.toml
crates/recrypt-storage/src/: error.rs  lib.rs  local.rs  memory.rs  s3.rs
crates/recrypt-storage/tests/: local_storage.rs  s3_integration.rs
crates/recrypt-tfhe/: Cargo.toml
crates/recrypt-tfhe/examples/: debug_ksk.rs  debug_pk_noise.rs  debug_pk_noise_counts.rs  generate_fixtures.rs  pk_timing.rs
crates/recrypt-tfhe/src/: ciphertext.rs  decrypt.rs  encrypt.rs  error.rs  lib.rs  params.rs  recrypt.rs
crates/recrypt-tfhe/src/keys/: mod.rs  public.rs  recrypt.rs  secret.rs
crates/recrypt-tfhe/tests/: recryption.rs  roundtrip.rs
dcypher-cli/: Cargo.toml
dcypher-cli/src/: config.rs  main.rs  output.rs
dcypher-cli/src/client/: api.rs  auth.rs  mod.rs
dcypher-cli/src/commands/: account.rs  config.rs  decrypt.rs  encrypt.rs  files.rs  helpers.rs  identity.rs  mod.rs  share.rs
dcypher-cli/src/wallet/: credential.rs  format.rs  mod.rs  storage.rs
dcypher-server/: Cargo.toml
dcypher-server/src/: main.rs  state.rs
dcypher-server/src/middleware/: auth.rs
dcypher-server/src/routes/: accounts.rs  files.rs  mod.rs  recryption.rs
dcypher-server/tests/: basic_integration_test.rs
dcypher-server/tests/common/: mod.rs
docker/: docker-compose.dev.yml
docs/: IMPLEMENTATION_PLAN.md  crypto-architecture.md  dual-classical-keys.md  hashing-standard.md  hybrid-encryption-architecture.md  non-determinism.md  openfhe-threading-model.md  openhands-setup.md  overview.agent.md  pre-backend-traits.md  proxy-service-discovery.md  spec.md  storage-design.md  testing-guide.md  tfhe-noise-analysis.md  tui-centralized-identity-summary.md  tui-navigation-fixes.md  user-guide.md  verification-architecture.md  wire-protocol.md
docs/archive/: hdprint-specification.md  hmac-analysis.md
docs/plans/: PHASE-4-VALIDATION-REPORT.md  (+15 more)
python-prototype/: ALLHANDS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Justfile  README.md  TUI_README.md  docker-compose.dev.yml  pyproject.toml
recrypt-cli/: Cargo.toml
recrypt-cli/src/: config.rs  main.rs
recrypt-cli/src/client/: api.rs  auth.rs  mod.rs
recrypt-cli/src/commands/: account.rs  config.rs  decrypt.rs  encrypt.rs  files.rs  helpers.rs  identity.rs  mod.rs  share.rs  wallet_cmd.rs
recrypt-cli/src/wallet/: credential.rs  format.rs  storage.rs
recrypt-server/: Cargo.toml
scripts/: check_liboqs_algorithms.py  demo_tui.py  get_openhands_sha.py  get_openhands_version.py  install_just_container.sh  install_just_usrlocalbin.sh  render_demo.py  spec_metadata.sh  test_determinism.py  test_openhands_suite.sh  test_tui_simple.py  update_openhands_version.py  visual_demo.py
src/: app_state.py  cli.py  cli_original_backup.py  config.py  crypto.zig  dcypher_cli.py  main.py  main.zig  models.py  root.zig  security.py  server.zig  test_dcypher_ffi.zig  test_openfhe.zig  tests.zig  tui_main.py
tests/: conftest.py  test_api.py  test_api_account.py  test_api_files.py  test_app_state.py  test_auth.py  test_auth_oqs.py  test_boolean_truth_tables.py  test_cli.py  test_idk_message.py  test_liboqs.py  test_main.py  test_oqs_sig.py  test_pqkeys.py  test_pre_buffer.py  test_proxy_reencryption.py  test_serial_cc.py
vhdl_parser/: README.md  traffic_light.vhdl
zig-proxy/: README.md  ciphertext.json
(+341 files in other folders)
