[workspace]
resolver = "2"
members = [
  "crates/dcypher-ffi",
  "crates/dcypher-openfhe-sys",
  "crates/dcypher-core",
  "crates/dcypher-proto",
  "crates/dcypher-storage",
  "crates/identikey-storage-auth",
  "dcypher-server",
  # "crates/dcypher-hdprint",  # parallel track
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/identikey/dcypher"

[workspace.dependencies]
# Crypto
cxx = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"

# Error handling
thiserror = "2"
anyhow = "1"

# Testing
proptest = "1"

# Storage (Phase 4)
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bs58 = "0.5"
aws-sdk-s3 = "1"
aws-config = "1"

# Auth service (Phase 4b)
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
