[workspace]
resolver = "2"
members = [
  "crates/recrypt-ffi",
  "crates/recrypt-openfhe-sys",
  "crates/recrypt-core",
  "crates/recrypt-proto",
  "crates/recrypt-storage",
  "crates/identikey-storage-auth",
  "recrypt-server",
  "recrypt-cli",
  # "crates/recrypt-hdprint",  # parallel track
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/identikey/recrypt"

[workspace.dependencies]
# Crypto
cxx = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"

# Error handling
thiserror = "2"
anyhow = "1"

# Testing
proptest = "1"

# Storage (Phase 4)
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bs58 = "0.5"
aws-sdk-s3 = "1"
aws-config = "1"

# Auth service (Phase 4b)
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
