[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcypher"
version = "0.1.0"
description = "dcypher"
requires-python = ">=3.12"
dependencies = [
    "uv",
    "fastapi",
    "uvicorn",
    "pytest",
    "pytest-xdist",
    "pytest-asyncio",
    "requests",
    "aiohttp",
    "ruff",
    "pre-commit",
    "pandas",
    "openfhe",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore-init-module-imports = true

[tool.ruff.lint]
# Add this line to ignore the F401 error for specific unused imports
ignore = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"src/dcypher/dcypher_front/src/App.test.js" = ["E501"]
"src/dcypher/dcypher_front/src/reportWebVitals.js" = ["E501"]
"src/dcypher/dcypher_front/src/index.js" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["openfhe-python"]
addopts = [
    "--import-mode=importlib",
    "--ignore=setup.py",
    "--ignore=src/dcypher/dcypher_front",
    "--ignore=src/dcypher/dcypher_back",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    # Ignore deprecation warnings from websockets library in FastAPI/Starlette
    "ignore:websockets.server.WebSocketServerProtocol is deprecated.*:DeprecationWarning",
]

[tool.uv.sources]
dcypher-backend = { path = ".", editable = true }
openfhe-python = { path = "./openfhe-python" }
openfhe = { path = "vendor/openfhe-python", editable = true }
