[package]
name = "dcypher-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for dCypher proxy recryption"

[[bin]]
name = "dcypher"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto for wallet encryption
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"

# Output
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"

# Paths
directories = "5"

# Encoding
bs58 = "0.5"
base64 = "0.22"
blake3 = "1"

# Time formatting
chrono = "0.4"

# Errors
thiserror = "1"
anyhow = "1"

# Workspace crates
dcypher-core = { path = "../crates/dcypher-core" }
dcypher-proto = { path = "../crates/dcypher-proto" }
dcypher-ffi = { path = "../crates/dcypher-ffi" }
ed25519-dalek = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
