[package]
name = "recrypt-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Recrypt proxy recryption"

[[bin]]
name = "recrypt"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto for wallet encryption
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"

# Output
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"

# Paths
directories = "5"

# Encoding
bs58 = "0.5"
base64 = "0.22"
blake3 = "1"

# Time formatting
chrono = "0.4"

# Errors
thiserror = "1"
anyhow = "1"

# Instrumentation
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# OS keyring integration (platform-specific features below)
keyring = { version = "3", default-features = false }

# Workspace crates
recrypt-core = { path = "../crates/recrypt-core" }
recrypt-proto = { path = "../crates/recrypt-proto" }
recrypt-ffi = { path = "../crates/recrypt-ffi" }
ed25519-dalek = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
