[package]
name = "dcypher-ffi"
version.workspace = true
edition.workspace = true

[dependencies]
cxx.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
rand_core.workspace = true
thiserror.workspace = true

# OpenFHE bindings
dcypher-openfhe-sys = { path = "../dcypher-openfhe-sys", optional = true }

# Post-quantum signatures via liboqs
# We disable OpenSSL to avoid system dependency; liboqs has fallback implementations
oqs = { version = "0.11", default-features = false, features = [
  "ml_dsa",
  "std",
], optional = true }

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
proptest.workspace = true

[features]
default = ["openfhe", "liboqs"]
openfhe = ["dep:dcypher-openfhe-sys"]
liboqs = ["dep:oqs"]
