[package]
name = "dcypher-proto"
version.workspace = true
edition.workspace = true

[dependencies]
# Protobuf
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encoding
base64 = "0.22"
hex = "0.4"

# Core types (we serialize these)
dcypher-core = { path = "../dcypher-core" }
ed25519-dalek.workspace = true

# Error handling
thiserror.workspace = true

# Blake3/Bao for streaming verification
blake3 = { version = "1.5", features = ["traits-preview"] }
bao = "0.12"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
proptest.workspace = true
dcypher-ffi = { path = "../dcypher-ffi" }
