[package]
name = "identikey-storage-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Authorization layer for content-addressed storage"

[features]
default = []
sqlite = ["rusqlite"]

[dependencies]
# Workspace
recrypt-core = { path = "../recrypt-core" }
recrypt-proto = { path = "../recrypt-proto" }
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true

# Hashing
blake3 = "1"
bs58.workspace = true

# Serialization
serde_json.workspace = true

# SQLite (optional)
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
recrypt-ffi = { path = "../recrypt-ffi" }
recrypt-storage = { path = "../recrypt-storage" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
