[package]
name = "recrypt-tfhe"
version.workspace = true
edition.workspace = true

[dependencies]
tfhe = "0.9"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
thiserror.workspace = true
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

# TODO: Add benchmarks in Phase 4
# [[bench]]
# name = "tfhe_ops"
# harness = false
